@@ -89,3 +89,11 @@ section > section > section > section > section > section > title {
     font-size: "12pt";
 }
 
+literallayout {
+    border:           "1mm solid #d3d7d5";
+    background-color: "#f5f5f6";
+    padding:          "1";
+    font-size:        "10pt";
+    font-family:      "monospace";
+}
+
